--- a/css/enlistics.css
+++ b/css/enlistics.css
@@ -8,7 +8,7 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
-.parallax {
+/*.parallax {
 	position: absolute;
 	overflow: hidden;
 	width: 100%;
@@ -20,7 +20,8 @@ body {
 .parallax img {
 	width: 100%;
 	height: 100%;
-}
+}*/
+
 /* Preloader */
 
 .preloader {
@@ -37,12 +38,6 @@ body {
 	left: calc(50% - 32px);
 }
 
-.preloader div {
-	display: none;
-	/* Preload the Second Pricing Image */
-	background: url(../img/pricing2.jpg) no-repeat 9999px 9999px;
-	background-position: 9999px 9999px;
-}
 
 /* Typography */
 
@@ -87,28 +82,6 @@ h6 {
 	font-size: 16px;
 }
 
-ul.white-list {
-	padding: 0;
-	list-style-type: none;
-}
-
-ul.white-list li {
-	font-size: 18px;
-	margin: 10px 0;
-	color: #f`ff;
-}
-
-ul.white-list li:before {
-	content: ' ';
-	position: relative;
-	top: -3px;
-	display: inline-block;
-	width: 6px;
-	height: 6px;
-	margin-right: 15px;
-	background: white;
-}
-
 header {
 	position: relative;
 	width: 100%;
@@ -143,7 +116,6 @@ header .typed {
 header .typed-cursor {
 	font-size: 60px;
 	display: inline-block;
-	margin: 0 10px;
 	color: #00a8ff;
 	-webkit-animation-name: flash;
 	animation-name: flash;
@@ -160,8 +132,42 @@ a {
 	transition: all 0.3s ease;
 }
 
-/* Navigation Bar ( Navbar ) */
+/*Icons*/
+.fa {
+	color: #00a8ff;
+}
 
+.fa-pencil {
+	font-size:2.5em !important;
+	-webkit-text-stroke:1px white;
+}
+
+.fa-mouse-pointer {
+	font-size:2em !important;
+	-webkit-text-stroke:1px white;
+
+}
+
+.fa-bolt {
+	font-size:2.5em !important;
+	-webkit-text-stroke:0.5px white;
+}
+
+.fa-facebook-official {
+	font-size:2.5em !important;
+}
+
+.fa-arrow-right {
+	font-size:2.5em !important;
+	-webkit-text-stroke:2px white;
+}
+
+.easysetup {
+	max-width:90%;
+	max-height:90%
+}
+
+/* Navigation Bar ( Navbar ) */
 nav.navbar {
 	position: absolute;
 	z-index: 9500;
@@ -195,6 +201,7 @@ nav.navbar-fixed-top .navbar-nav > li > a:not(.btn) {
 .login {
 	border:1px solid white;
 }
+
 /* Buttons */
 
 .btn {
@@ -216,7 +223,7 @@ nav.navbar-fixed-top .navbar-nav > li > a:not(.btn) {
 
 .btn.btn-blue {
 	background: #00a8ff;
-	margin-top:20px;
+	margin-top:40px;
 }
 
 .btn.btn-blue:hover {
@@ -254,6 +261,19 @@ nav.navbar-fixed-top .navbar-nav > li > a:not(.btn) {
 .btn.btn-gray-fill:hover {
 	border-color: #bbb;
 	background: #bbb;
+}
+
+.btn-small {
+	font-size: 14px;
+	display: inline-block;
+	padding: 8px 15px;
+	color: white;
+	border: 2px solid transparent;
+	border-radius: 2px;
+	background: transparent;
+	-webkit-transition: all 0.3s ease;
+	transition: all 0.3s ease;
+	margin-top:5px !important;
 }
 
 /* Blink Cursor */
@@ -294,8 +314,12 @@ section {
 	padding: 100px 0 40px;
 }
 
+#rep-contact {
+	padding: 60px 0;
+}
+
 .learnmore {
-		color: #00a8ff;
+		color: #00a8ff !important;
 		text-align:center;
 		margin-top:20px;
 }
@@ -309,138 +333,7 @@ section {
 .descrip {
 	margin-top:60px;
 }
-
-
-.cut-top {
-	content: ' ';
-	position: absolute;
-	z-index: 1;
-	top: -80px;
-	left: 0;
-	width: 0;
-	height: 0;
-	border-top: 80px solid transparent;
-	border-right: 30px solid white;
-}
-
-.cut-bottom {
-	content: ' ';
-	position: absolute;
-	z-index: 1;
-	bottom: -80px;
-	left: 0;
-	width: 0;
-	height: 0;
-	border-bottom: 80px solid transparent;
-	border-left: 30px solid white;
-}
-
-.intro-tables {
-	top: -130px;
-	position: relative;
-}
-
-.intro-table {
-	-webkit-background-size: cover;
-	background-size: cover;
-	background-repeat: repeat;
-	background-position: 0% 0%;
-}
-
-.intro-table-first {
-	background-image: url('../img/table-1.jpg');
-}
-
-.intro-table-hover {
-	-webkit-transition: background-image 0.3s ease, background-position 0.3s;
-	transition: background-image 0.3s ease, background-position 0.3s;
-	background-image: url('../img/table-2.jpg');
-}
-
-.intro-table-hover h4 {
-	-webkit-transform: translateY(170px);
-	transform: translateY(170px);
-	-webkit-transition: -webkit-transform 0.3s;
-	transition: transform 0.3s;
-}
-
-.intro-table-hover:hover {
-	background-image: url('../img/table-2-hover.jpg');
-	background-position: 50% 50%;
-}
-
-.intro-table-third {
-	background-image: url('../img/table-3.jpg');
-}
-
-.intro-table-hover .expand {
-	margin: 30px;
-	margin-top: 120px;
-	opacity: 0;
-	-webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
-	transition: transform 0.3s ease, opacity 0.3s;
-	-webkit-transform: scale(0.6);
-	-ms-transform: scale(0.6);
-	transform: scale(0.6);
-}
-
-.intro-table-hover:hover h4 {
-	-webkit-transform: translateY(0);
-	transform: translateY(0);
-}
-
-.intro-table-hover:hover .expand {
-	opacity: 1;
-	-webkit-transform: scale(1);
-	-ms-transform: scale(1);
-	transform: scale(1);
-}
-
-.intro-table-hover .hide-hover {
-	-webkit-transition: opacity 0.3s ease;
-	transition: opacity 0.3s ease;
-}
-
-.intro-table-hover:hover .hide-hover {
-	opacity: 0;
-}
-
-.intro-tables .intro-table {
-	position: relative;
-	width: 100%;
-	height: 300px;
-	margin: 20px 0;
-}
-
-.intro-tables .intro-table .heading {
-	margin: 0;
-	padding: 30px;
-}
-
-.intro-tables .intro-table .small-heading {
-	margin: 0;
-	padding: 0 30px;
-}
-
-.intro-tables .intro-table .bottom {
-	position: absolute;
-	bottom: 0;
-}
-
-.intro-tables .intro-table .owl-schedule .schedule-row {
-	padding: 10px 30px;
-	color: white;
-	transition: all 0.3s ease;
-}
-
-.owl-schedule .schedule-row:not(:last-child) {
-	border-bottom: 1px solid rgba(255, 255, 255, 0.4);
-}
-
-.owl-testimonials .author {
-	margin-top: 50px;
-}
-
+/*
 .ripple-effect {
 	position: absolute;
 	width: 50px;
@@ -475,7 +368,7 @@ section {
 		-webkit-transform: scale(100);
 		transform: scale(100);
 	}
-}
+}*/
 
 .section-head {
 padding-bottom: 40px;
@@ -558,6 +451,10 @@ padding-bottom: 40px;
 	font-weight:bold;
 }
 
+.rotating-text-pre{
+	padding-right:100px
+}
+
 .No{
 	white-space: nowrap;
 	position:relative;
@@ -565,11 +462,11 @@ padding-bottom: 40px;
 
 .rotating-text {
 	display:inline;
-	text-indent: 7px;
+	text-indent: 8px;
 }
 
 .rotating-text span {
-	animation: rotateWords 12.5s linear infinite 0s;
+	animation: rotateWords 10s linear infinite 0s;
 	position: absolute;;
 	opacity: 0;
 	overflow: hidden;
@@ -578,306 +475,72 @@ padding-bottom: 40px;
 }
 
 .rotating-text span:nth-child(2) {
-	animation-delay: 2.5s;
+	animation-delay: 2s;
 }
 
 .rotating-text span:nth-child(3) {
-	animation-delay: 5s;
+	animation-delay: 4s;
 }
 
 .rotating-text span:nth-child(4) {
-	animation-delay: 7.5s;
+	animation-delay: 6s;
 }
 
 .rotating-text span:nth-child(5) {
-	animation-delay: 10s;
+	animation-delay: 8s;
 }
 
 @keyframes rotateWords {
 	0% { opacity: 0; animation-timing-function:inherit;height: 0px; }
-	10% { opacity: 1; height: 60px; }
-	15% { opacity: 1; height: 60px; }
-	20% { opacity:0; height: 60px; }
+	2% { opacity: 0; height: 60px; transform:translateY(-30px)}
+	5% { opacity: 1; height: 60px; transform:translateY(0px)}
+	15% { opacity: 1; height: 60px; transform:translateY(0px)}
+	20% { opacity:0; height: 60px; transform:translateY(30px)}
 	100% { opacity: 0; }
 }
 
 /* Footer */
-
 footer {
-	padding: 140px 0 40px;
-	background: url('../img/footer.jpg');
-	-webkit-background-size: cover;
+	padding: 20px 0;
+	background: rgba(28, 36, 65, 0.93);
 	background-size: cover;
 }
 
-footer .trial-button {
-	overflow: hidden !important;
-	margin: 40px 0;
+footer p {
+	font-size:14px;
 }
 
-footer .open-blink {
-	content: ' ';
-	position: relative;
-	display: inline-block;
-	width: 14px;
-	height: 14px;
-	margin: 0 20px;
-	border-radius: 50%;
-	background-color: #4caf50;
-	-webkit-animation-name: flash;
-	animation-name: flash;
-	-webkit-animation-duration: 1s;
-	animation-duration: 1s;
-	-webkit-animation-iteration-count: infinite;
-	animation-iteration-count: infinite;
+footer a:hover {
+	color: #00a8ff
 }
 
-footer .open-blink:before {
-	content: ' ';
-	position: absolute;
-	top: -8px;
-	left: -8px;
-	display: inline-block;
-	width: 30px;
-	height: 30px;
-	opacity: 0.1;
-	border-radius: 50%;
-	background-color: #4caf50;
+.footer-title {
+	margin-bottom:20px;
+	color:white;
+	}
+
+.balance-text {
+	text-wrap: balanced;
 }
 
-footer .opening-hours {
-	margin-top: 60px;
+.blog-title{
+	text-decoration: underline;
+	color: rgba(255, 255, 255, 0.75);
 }
 
-footer .bottom-footer {
-	margin-top: 150px;
+#copyright {
+	font-size:14px;
+	margin:5px 0
 }
-
-footer .social-footer {
-	padding: 0;
-	list-style: none;
-}
-
-footer .social-footer li {
-	display: inline-block;
-	margin: 0 10px;
-}
-
-footer .social-footer li a {
-	font-size: 24px;
-	color: #fff;
-}
-
-footer .social-footer li:hover a {
-	color: #00a8ff;
-}
-/* Form Control */
 
 .form-control {
-	font-size: 18px;
-	position: relative;
-	left: 0;
-	height: auto;
-	padding: 20px 30px;
-	border: 1px;
-	border-radius: 0;
-	box-shadow: 0;
+height:40px;
+margin-top:5px;
 }
 
-.form-control.form-white {
-	color: #fff;
-	border: 2px solid white;
-	background: transparent;
-	-webkit-transition: background-color 0.3s;
-	transition: background-color 0.3s;
+#rep-contact h4 {
+	color:gray;
 }
-
-.form-control.form-white::-webkit-input-placeholder {
-	/* WebKit browsers */
-	color: #fff;
-}
-
-.form-control.form-white:-moz-placeholder {
-	opacity: 1;
-	/* Mozilla Firefox 4 to 18 */
-	color: #fff;
-}
-
-.form-control.form-white::-moz-placeholder {
-	opacity: 1;
-	/* Mozilla Firefox 19+ */
-	color: #fff;
-}
-
-.form-control.form-white:-ms-input-placeholder {
-	/* Internet Explorer 10+ */
-	color: #fff;
-}
-
-.form-control.form-white:focus {
-	background: rgba(255,255,255,0.2);
-}
-
-/* Popup */
-.modal {
-	padding: 0 25px !important;
-}
-
-.modal-dialog {
-	width: 100%;
-	max-width: 560px;
-	margin: 0 auto;
-}
-
-.modal-popup {
-	position: relative;
-	padding: 45px 30px;
-	text-align: center;
-	background: url('../img/popup.jpg');
-	box-shadow: none;
-	border-radius: 2px;
-}
-
-.modal-popup a.close-link {
-	font-size: 22px;
-	position: absolute;
-	top: 20px;
-	right: 30px;
-	color: #fff;
-}
-
-.popup-form {
-	width: 90%;
-	max-width: 375px;
-	margin: 60px auto;
-}
-
-.popup-form .form-control {
-	margin: 20px 0;
-}
-
-.popup-form .form-control.dropdown {
-	text-align: left;
-}
-
-.popup-form .form-control.dropdown:after {
-	content: '\f0d7';
-	font-family: 'FontAwesome';
-	display: inline-block;
-	float: right;
-	color: white;
-}
-
-.popup-form .dropdown .dropdown-menu {
-	top: 65px;
-	width: 100%;
-	padding: 0;
-	border: 2px solid white;
-	border-top: 0;
-	border-radius: 0;
-	background: white;
-	box-shadow: none;
-}
-
-.popup-form .dropdown .dropdown-menu li {
-	font-size: 16px;
-	width: 100%;
-	background: transparent;
-}
-
-.popup-form .dropdown .dropdown-menu li a {
-	width: 100%;
-	padding: 15px 30px;
-	color: #00a8ff;
-}
-
-.popup-form .dropdown .dropdown-menu li:hover a {
-	color: #fff;
-	background: #00a8ff;
-}
-
-/* Checkbox */
-
-.checkbox-holder {
-	white-space: nowrap;
-}
-
-.checkbox {
-	position: relative;
-	display: block;
-}
-
-.checkbox {
-	position: relative;
-}
-
-.checkbox label:before {
-	content: '';
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 20px;
-	height: 20px;
-	cursor: pointer;
-	border: 2px solid white;
-	background: transparent;
-	-webkit-transition: background-color 0.3s;
-	transition: background-color 0.3s;
-}
-
-.checkbox input[type=checkbox]:focus + label:before {
-	background: rgba(255,255,255,0.2);
-}
-
-.checkbox label:after {
-	content: '';
-	position: absolute;
-	top: 6px;
-	left: 6px;
-	width: 8px;
-	height: 8px;
-	opacity: 0;
-	background: white;
-	-webkit-transition: all 0.3s ease;
-	transition: all 0.3s ease;
-}
-
-.checkbox input[type=checkbox] {
-	opacity: 0;
-	position: absolute;
-	width: 0;
-	height: 0;
-}
-
-.checkbox input[type=checkbox]:checked + label:after {
-	opacity: 1;
-}
-
-.checkbox-holder span {
-	position: relative;
-	display: inline-block;
-	margin: 0 0 0 10px;
-	white-space: normal;
-	color: #fff;
-}
-
-.btn.btn-submit {
-	width: 100%;
-	margin-top: 30px;
-	color: #00a8ff;
-	border: 2px solid #fff;
-	background: #fff;
-}
-
-.btn.btn-submit:focus {
-	font-weight: bold;
-}
-
-.btn.btn-submit:hover {
-	color: #00a8ff;
-	background: #fff;
-}
-
 /* Mobile Nav */
 .mobile-nav {
 	position: fixed;
@@ -946,6 +609,7 @@ footer .social-footer li:hover a {
 .bold {
 	font-weight: bold;
 }
+
 /* Colors */
 
 .white {
@@ -1004,6 +668,7 @@ footer .social-footer li:hover a {
 	}
 }
 
+
 /* Media Queries */
 
 @media(max-width:991px) {
@@ -1016,40 +681,7 @@ footer .social-footer li:hover a {
 	.pricing {
 		margin-bottom: 30px;
 	}
-	.pricings .pricing .info-icon {
-		display: none;
 	}
-	.pricings .pricing .box-main,
-	.pricings .pricing .box-second {
-		left: 0;
-		width: 100%;
-		padding: 50px 50px 0;
-		text-align: left;
-		background: #00a8ff;
-	}
-	.pricings .pricing .box-main.active {
-		background: #00a8ff;
-		-webkit-transform: translateX(0%);
-		-ms-transform: translateX(0%);
-		transform: translateX(0%);
-	}
-	.pricings .pricing .box-second {
-		position: relative;
-		opacity: 1;
-	}
-	.popup-form {
-		width: 100%;
-		margin: 60px auto;
-	}
-	.modal {
-		padding: 0 10px !important;
-	}
-	.popup-form .form-control:not(.dropdown):focus {
-		position: relative;
-		padding-right: 30px;
-		padding-left: 30px;
-	}
-}
 
 @media(max-width: 400px) {
 	header .typed-cursor {
